@@ -1,4 +1,5 @@
 rtmp.host_port = 0.0.0.0:1935
+rtmp.threadcount = 4
 debug_proxy.host_port = 0.0.0.0:1936
 proxy_forward.host_port = 127.0.0.1:1935
 rtmps.host_port = 127.0.0.1:1945
