@@ -8,6 +8,7 @@ Red5 0.6    (unreleased)
 ------------------------
 Bugfixes:
 - serialization of Maps with non-number keys fixed (APPSERVER-60)
+- multiple IO processor threads are used by default
 
 
 Red5 0.6rc2 (2007-02-12)
